--- a/Sprint4/Task3.ipynb
+++ b/Sprint4/Task3.ipynb
@@ -52,8 +52,477 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Индентификатор поставщика: 1, Название компании: ABC Manufacturing, Тип продукта: Electronics, Годовой доход: ¤10,000,000.00, Дата регистрации: 1/1/2000\n",
+      "Отправлено из ABC Manufacturing (Основан в 1995)\n",
+      "Заказ для ABC Manufacturing\n",
+      "Название компании: XYZ Retail, Местоположение магазина: New York, Количество магазинов: 10\n",
+      "Отправлено из XYZ Retail\n",
+      "Заказ для XYZ Retail, Магазин расположен в New York\n",
+      "Индентификатор поставщика: 3, Название компании: Global Imports, Тип продукта: Clothing, Годовой доход: ¤2,500,000.00, Дата регистрации: 1/1/2015\n",
+      "Отправлено из Global Imports\n",
+      "Заказы для импорта не поддерживаются.\n",
+      "Индентификатор поставщика: 1, Название компании: ABC Manufacturing, Тип продукта: Electronics, Годовой доход: ¤10,000,000.00, Дата регистрации: 1/1/2000\n",
+      "Название компании: XYZ Retail, Местоположение магазина: New York, Количество магазинов: 10\n",
+      "Индентификатор поставщика: 3, Название компании: Global Imports, Тип продукта: Clothing, Годовой доход: ¤2,500,000.00, Дата регистрации: 1/1/2015\n",
+      "Уведомление от Global Imports: Экспортируем товары из China в Russia.\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "public abstract class Supplier\n",
+    "{\n",
+    "    public int SupplierId { get; set; }\n",
+    "    public string CompanyName { get; set; }\n",
+    "    public string ProductType { get; set; }\n",
+    "    public DateTime RegistrationDate { get; set; }  \n",
+    "    public decimal AnnualRevenue { get; set; } \n",
+    "\n",
+    "    public virtual string GetCompanyInfo()\n",
+    "    {\n",
+    "        return $\"Индентификатор поставщика: {SupplierId}, Название компании: {CompanyName}, Тип продукта: {ProductType}, Годовой доход: {AnnualRevenue:C}, Дата регистрации: {RegistrationDate:d}\";\n",
+    "    }\n",
+    "\n",
+    "    public virtual string ProvideQuote()\n",
+    "    {\n",
+    "        return $\"Отправлено из {CompanyName}\";\n",
+    "    }\n",
+    "\n",
+    "    public virtual string SubmitOrder()\n",
+    "    {\n",
+    "        return $\"Заказ для {CompanyName}\";\n",
+    "    }\n",
+    "\n",
+    "    public virtual string GetFinancialSummary()\n",
+    "    {\n",
+    "        return $\"Годовой доход: {AnnualRevenue:C}, Дата регистрации: {RegistrationDate:d}\";\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Manufacturer : Supplier\n",
+    "{\n",
+    "    public int FoundedYear { get; set; }\n",
+    "    public string HeadquartersLocation { get; set; }\n",
+    "\n",
+    "    public override string ProvideQuote()\n",
+    "    {\n",
+    "        return base.ProvideQuote() + $\" (Основан в {FoundedYear})\";\n",
+    "    }\n",
+    "\n",
+    "    public override string GetFinancialSummary()\n",
+    "    {\n",
+    "        return $\"{base.GetFinancialSummary()} Основан в: {FoundedYear}\";\n",
+    "    }\n",
+    "\n",
+    "    public string GetManufacturingDetails()\n",
+    "    {\n",
+    "        return $\"Детали производителя {CompanyName}: Главное здание находится {HeadquartersLocation}\";\n",
+    "    }\n",
+    "\n",
+    "    public void UpdateHeadquarters(string newLocation)\n",
+    "    {\n",
+    "        HeadquartersLocation = newLocation;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Retailer : Supplier, IComparable\n",
+    "{\n",
+    "    public string StoreLocation { get; set; }\n",
+    "    public int NumberOfStores { get; set; }\n",
+    "\n",
+    "    public override string SubmitOrder()\n",
+    "    {\n",
+    "        return base.SubmitOrder() + $\", Магазин расположен в {StoreLocation}\";\n",
+    "    }\n",
+    "\n",
+    "    public bool IsOpenOnWeekends()\n",
+    "    {\n",
+    "        if (StoreLocation == \"Москва\")\n",
+    "        {\n",
+    "            return true;\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            return false;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    public decimal CalculateTotalSales(int numberOfItemsSold, decimal itemPrice)\n",
+    "    {\n",
+    "        return numberOfItemsSold * itemPrice;\n",
+    "    }\n",
+    "\n",
+    "    public override string GetCompanyInfo()\n",
+    "    {\n",
+    "        return $\"Название компании: {CompanyName}, Местоположение магазина: {StoreLocation}, Количество магазинов: {NumberOfStores}\";\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    public void OpenNewStore(string location)\n",
+    "    {\n",
+    "        NumberOfStores++;\n",
+    "        Console.WriteLine($\"Открыт новый магазин в {location}\");\n",
+    "    }\n",
+    "\n",
+    "    public override string ToString()\n",
+    "    {\n",
+    "        return GetCompanyInfo();\n",
+    "    }\n",
+    "\n",
+    "    public int CompareTo(object obj)\n",
+    "    {\n",
+    "        var otherRetailer = obj as Retailer;\n",
+    "        if (otherRetailer != null)\n",
+    "        {\n",
+    "            if (NumberOfStores > otherRetailer.NumberOfStores)\n",
+    "                return 1;\n",
+    "            else if (NumberOfStores < otherRetailer.NumberOfStores)\n",
+    "                return -1;\n",
+    "            return 0;\n",
+    "        }\n",
+    "\n",
+    "        throw new ArgumentException(\"Объект не является экземпляром класса Retailer.\");\n",
+    "    }\n",
+    "\n",
+    "    public static bool operator >(Retailer r1, Retailer r2)\n",
+    "    {\n",
+    "        int result = r1.CompareTo(r2);\n",
+    "        return result > 0 ? true : false;\n",
+    "    }\n",
+    "\n",
+    "    public static bool operator <(Retailer r1, Retailer r2)\n",
+    "    {\n",
+    "        int result = r1.CompareTo(r2);\n",
+    "        return result < 0 ? true : false;\n",
+    "    }\n",
+    "\n",
+    "    protected internal virtual void Display()\n",
+    "    {\n",
+    "        Console.WriteLine(ToString());\n",
+    "    }\n",
+    "\n",
+    "    internal virtual string GetRetailerInfo()\n",
+    "    {\n",
+    "        return $\"{CompanyName} имеет {NumberOfStores} магазинов.\";\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Importer : Supplier, ISupportAndSubscribe\n",
+    "{\n",
+    "    public string OriginCountry { get; set; }\n",
+    "    public string ExportDestination { get; set; }\n",
+    "\n",
+    "    [Obsolete(\"Используйте метод GetExporterInfo вместо этого.\")]\n",
+    "    public new string GetCompanyInfo() => base.GetCompanyInfo();\n",
+    "\n",
+    "\n",
+    "    public virtual string GetExporterInfo()\n",
+    "    {\n",
+    "        return base.GetCompanyInfo() + $\" (Страна происхождения: {OriginCountry})\";\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    public sealed override string SubmitOrder()\n",
+    "    {\n",
+    "        return \"Заказы для импорта не поддерживаются.\";\n",
+    "    }\n",
+    "\n",
+    "    private void SetCustomsClearance(bool isCleared)\n",
+    "    {\n",
+    "        if (isCleared)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Товар прошел таможенную очистку.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Ожидается прохождение таможенной очистки.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    #region Интерфейс ISupportAndSubscribe\n",
+    "    void ISupportAndSubscribe.Notify()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Уведомление от {CompanyName}: Экспортируем товары из {OriginCountry} в {ExportDestination}.\");\n",
+    "    }\n",
+    "\n",
+    "    private EventHandler changedEvent;\n",
+    "\n",
+    "    event EventHandler ISupportAndSubscribe.Changed\n",
+    "    {\n",
+    "        add { changedEvent += value; }\n",
+    "        remove { changedEvent -= value; }\n",
+    "    }\n",
+    "    #endregion\n",
+    "}\n",
+    "\n",
+    "internal interface ISupportAndSubscribe\n",
+    "{\n",
+    "    void Notify();\n",
+    "    event EventHandler Changed;\n",
+    "}\n",
+    "\n",
+    "public class SupplierWithContact : Supplier\n",
+    "{\n",
+    "    public string ContactPerson { get; set; }\n",
+    "\n",
+    "\n",
+    "    public string ProvideQuote(decimal discount)\n",
+    "    {\n",
+    "        return $\"Providing quote with a discount of {discount}% for {ProductType}.\";\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class SupplierList<T> where T : Supplier\n",
+    "{\n",
+    "    private readonly List<T> _suppliers = new List<T>();\n",
+    "\n",
+    "    public void AddSupplier(T supplier)\n",
+    "    {\n",
+    "        _suppliers.Add(supplier);\n",
+    "    }\n",
+    "\n",
+    "    public List<T> GetSuppliers()\n",
+    "    {\n",
+    "        return _suppliers;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "        Supplier manufacturer = new Manufacturer\n",
+    "        {\n",
+    "            SupplierId = 1,\n",
+    "            CompanyName = \"ABC Manufacturing\",\n",
+    "            ProductType = \"Electronics\",\n",
+    "            FoundedYear = 1995,\n",
+    "            RegistrationDate = new DateTime(2000, 1, 1),\n",
+    "            AnnualRevenue = 10000000m\n",
+    "        };\n",
+    "\n",
+    "        Supplier retailer = new Retailer\n",
+    "        {\n",
+    "            SupplierId = 2,\n",
+    "            CompanyName = \"XYZ Retail\",\n",
+    "            ProductType = \"Furniture\",\n",
+    "            StoreLocation = \"New York\",\n",
+    "            NumberOfStores = 10,\n",
+    "            RegistrationDate = new DateTime(2010, 1, 1),\n",
+    "            AnnualRevenue = 5000000m\n",
+    "        };\n",
+    "\n",
+    "        Supplier importer = new Importer\n",
+    "        {\n",
+    "            SupplierId = 3,\n",
+    "            CompanyName = \"Global Imports\",\n",
+    "            ProductType = \"Clothing\",\n",
+    "            OriginCountry = \"China\",\n",
+    "            ExportDestination = \"Russia\",\n",
+    "            RegistrationDate = new DateTime(2015, 1, 1),\n",
+    "            AnnualRevenue = 2500000m\n",
+    "        };\n",
+    "\n",
+    "        Console.WriteLine(manufacturer.GetCompanyInfo());\n",
+    "        Console.WriteLine(manufacturer.ProvideQuote());\n",
+    "        Console.WriteLine(manufacturer.SubmitOrder());\n",
+    "\n",
+    "        Console.WriteLine(retailer.GetCompanyInfo());\n",
+    "        Console.WriteLine(retailer.ProvideQuote());\n",
+    "        Console.WriteLine(retailer.SubmitOrder());\n",
+    "\n",
+    "        Console.WriteLine(importer.GetCompanyInfo());\n",
+    "        Console.WriteLine(importer.ProvideQuote());\n",
+    "        Console.WriteLine(importer.SubmitOrder());\n",
+    "\n",
+    "        SupplierList<Supplier> suppliers = new SupplierList<Supplier>();\n",
+    "        suppliers.AddSupplier(manufacturer);\n",
+    "        suppliers.AddSupplier(retailer);\n",
+    "        suppliers.AddSupplier(importer);\n",
+    "\n",
+    "        foreach (var supplier in suppliers.GetSuppliers())\n",
+    "        {\n",
+    "            Console.WriteLine(supplier.GetCompanyInfo());\n",
+    "        }\n",
+    "\n",
+    "        ISupportAndSubscribe subscriber = importer as ISupportAndSubscribe;\n",
+    "        subscriber.Notify();\n",
+    "\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Список поставщиков:\n",
+      "Логистический центр - Стоимость услуг: 140000 руб\n",
+      "Поставщик ИТ-оборудования - Стоимость услуг: 75000 руб\n",
+      "\n",
+      "Список сотрудников:\n",
+      "Чепурных Софа - Должность: Менеджер - Стоимость услуг: 85000 руб\n",
+      "Шаукерова Аделя - Должность: Разработчик - Стоимость услуг: 100000 руб\n",
+      "\n",
+      "Общие расходы: 400000 руб\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "public interface IEnterprise\n",
+    "{\n",
+    "    void AddSupplier(ISupplier supplier); \n",
+    "    void AddEmployee(IEmployee employee); \n",
+    "    List<ISupplier> GetSuppliers(); \n",
+    "    List<IEmployee> GetEmployee(); \n",
+    "    decimal CalculateTotalExpenses();\n",
+    "}\n",
+    "\n",
+    "public interface ISupplier\n",
+    "{\n",
+    "    string GetName(); \n",
+    "    decimal GetCost(); \n",
+    "    string SupplierType { get; }\n",
+    "}\n",
+    "\n",
+    "public interface IEmployee\n",
+    "{\n",
+    "    string GetFullName(); \n",
+    "    decimal GetSalary(); \n",
+    "    string GetPosition();\n",
+    "    string Position { get; }\n",
+    "}\n",
+    "\n",
+    "public class Enterprise : IEnterprise\n",
+    "{\n",
+    "    private List<ISupplier> suppliers = new List<ISupplier>(); \n",
+    "    private List<IEmployee> employees = new List<IEmployee>(); \n",
+    "\n",
+    "    public void AddSupplier(ISupplier supplier)\n",
+    "    {\n",
+    "        suppliers.Add(supplier); \n",
+    "    }\n",
+    "\n",
+    "    public void AddEmployee(IEmployee employee)\n",
+    "    {\n",
+    "        employees.Add(employee); \n",
+    "    }\n",
+    "\n",
+    "    public List<ISupplier> GetSuppliers()\n",
+    "    {\n",
+    "        return suppliers; \n",
+    "    }\n",
+    "\n",
+    "    public List<IEmployee> GetEmployee()\n",
+    "    {\n",
+    "        return employees; \n",
+    "    }\n",
+    "\n",
+    "    public decimal CalculateTotalExpenses()\n",
+    "    {\n",
+    "        decimal total = 0;\n",
+    "        foreach (var supplier in suppliers)\n",
+    "        {\n",
+    "            total += supplier.GetCost();\n",
+    "        }\n",
+    "        foreach (var employee in employees)\n",
+    "        {\n",
+    "            total += employee.GetSalary();\n",
+    "        }\n",
+    "        return total; \n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Supplier : ISupplier\n",
+    "{\n",
+    "    public string SupplierType { get; private set; } \n",
+    "    private string Name; \n",
+    "    private decimal Cost; \n",
+    "\n",
+    "    public Supplier(string name, decimal cost, string supplierType)\n",
+    "    {\n",
+    "        Name = name; \n",
+    "        Cost = cost; \n",
+    "        SupplierType = supplierType; \n",
+    "    }\n",
+    "\n",
+    "    public string GetName()\n",
+    "    {\n",
+    "        return Name; \n",
+    "    }\n",
+    "\n",
+    "    public decimal GetCost()\n",
+    "    {\n",
+    "        return Cost; \n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Employee : IEmployee\n",
+    "{\n",
+    "    private string FullName; \n",
+    "    private decimal Salary; \n",
+    "    public string Position { get; private set; } \n",
+    "\n",
+    "    public Employee(string fullName, decimal salary, string position)\n",
+    "    {\n",
+    "        FullName = fullName; \n",
+    "        Salary = salary; \n",
+    "        Position = position; \n",
+    "    }\n",
+    "\n",
+    "    public string GetFullName()\n",
+    "    {\n",
+    "        return FullName; \n",
+    "    }\n",
+    "\n",
+    "    public decimal GetSalary()\n",
+    "    {\n",
+    "        return Salary; \n",
+    "    }\n",
+    "\n",
+    "    public string GetPosition()\n",
+    "    {\n",
+    "        return Position; \n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "IEnterprise enterprise = new Enterprise();\n",
+    "\n",
+    "enterprise.AddSupplier(new Supplier(\"Логистический центр\", 140000, \"Логистика\"));\n",
+    "enterprise.AddSupplier(new Supplier(\"Поставщик ИТ-оборудования\", 75000, \"ИТ-оборудование\"));\n",
+    "\n",
+    "enterprise.AddEmployee(new Employee(\"Рагимова Мадина\", 85000, \"Менеджер\"));\n",
+    "enterprise.AddEmployee(new Employee(\"Моторова Дана\", 100000, \"Разработчик\"));\n",
+    "\n",
+    "Console.WriteLine(\"Список поставщиков:\");\n",
+    "foreach (var supplier in enterprise.GetSuppliers())\n",
+    "{\n",
+    "    Console.WriteLine($\"{supplier.GetName()} - Стоимость услуг: {supplier.GetCost()} руб\");\n",
+    "}\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "Console.WriteLine(\"Список сотрудников:\");\n",
+    "foreach (var employee in enterprise.GetEmployee())\n",
+    "{\n",
+    "    Console.WriteLine($\"{employee.GetFullName()} - Должность: {employee.GetPosition()} - Стоимость услуг: {employee.GetSalary()} руб\");\n",
+    "}\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "decimal totalExpenses = enterprise.CalculateTotalExpenses();\n",
+    "Console.WriteLine($\"Общие расходы: {totalExpenses} руб\");\n"
+   ]
   }
  ],
  "metadata": {
