--- a/Sprint4/Task3.ipynb
+++ b/Sprint4/Task3.ipynb
@@ -295,71 +295,76 @@
     "    }\n",
     "}\n",
     "\n",
+    "\n",
+    "Supplier manufacturer = new Manufacturer\n",
     "{\n",
-    "        Supplier manufacturer = new Manufacturer\n",
-    "        {\n",
-    "            SupplierId = 1,\n",
-    "            CompanyName = \"ABC Manufacturing\",\n",
-    "            ProductType = \"Electronics\",\n",
-    "            FoundedYear = 1995,\n",
-    "            RegistrationDate = new DateTime(2000, 1, 1),\n",
-    "            AnnualRevenue = 10000000m\n",
-    "        };\n",
+    "    SupplierId = 1,\n",
+    "    CompanyName = \"ABC Manufacturing\",\n",
+    "    ProductType = \"Electronics\",\n",
+    "    FoundedYear = 1995,\n",
+    "    RegistrationDate = new DateTime(2000, 1, 1),\n",
+    "    AnnualRevenue = 10000000m\n",
+    "};\n",
     "\n",
-    "        Supplier retailer = new Retailer\n",
-    "        {\n",
-    "            SupplierId = 2,\n",
-    "            CompanyName = \"XYZ Retail\",\n",
-    "            ProductType = \"Furniture\",\n",
-    "            StoreLocation = \"New York\",\n",
-    "            NumberOfStores = 10,\n",
-    "            RegistrationDate = new DateTime(2010, 1, 1),\n",
-    "            AnnualRevenue = 5000000m\n",
-    "        };\n",
+    "Supplier retailer = new Retailer\n",
+    "{\n",
+    "    SupplierId = 2,\n",
+    "    CompanyName = \"XYZ Retail\",\n",
+    "    ProductType = \"Furniture\",\n",
+    "    StoreLocation = \"New York\",\n",
+    "    NumberOfStores = 10,\n",
+    "    RegistrationDate = new DateTime(2010, 1, 1),\n",
+    "    AnnualRevenue = 5000000m\n",
+    "};\n",
     "\n",
-    "        Supplier importer = new Importer\n",
-    "        {\n",
-    "            SupplierId = 3,\n",
-    "            CompanyName = \"Global Imports\",\n",
-    "            ProductType = \"Clothing\",\n",
-    "            OriginCountry = \"China\",\n",
-    "            ExportDestination = \"Russia\",\n",
-    "            RegistrationDate = new DateTime(2015, 1, 1),\n",
-    "            AnnualRevenue = 2500000m\n",
-    "        };\n",
+    "Supplier importer = new Importer\n",
+    "{\n",
+    "    SupplierId = 3,\n",
+    "    CompanyName = \"Global Imports\",\n",
+    "    ProductType = \"Clothing\",\n",
+    "    OriginCountry = \"China\",\n",
+    "    ExportDestination = \"Russia\",\n",
+    "    RegistrationDate = new DateTime(2015, 1, 1),\n",
+    "    AnnualRevenue = 2500000m\n",
+    "};\n",
     "\n",
-    "        Console.WriteLine(manufacturer.GetCompanyInfo());\n",
-    "        Console.WriteLine(manufacturer.ProvideQuote());\n",
-    "        Console.WriteLine(manufacturer.SubmitOrder());\n",
+    "Console.WriteLine(manufacturer.GetCompanyInfo());\n",
+    "Console.WriteLine(manufacturer.ProvideQuote());\n",
+    "Console.WriteLine(manufacturer.SubmitOrder());\n",
     "\n",
-    "        Console.WriteLine(retailer.GetCompanyInfo());\n",
-    "        Console.WriteLine(retailer.ProvideQuote());\n",
-    "        Console.WriteLine(retailer.SubmitOrder());\n",
+    "Console.WriteLine(retailer.GetCompanyInfo());\n",
+    "Console.WriteLine(retailer.ProvideQuote());\n",
+    "Console.WriteLine(retailer.SubmitOrder());\n",
     "\n",
-    "        Console.WriteLine(importer.GetCompanyInfo());\n",
-    "        Console.WriteLine(importer.ProvideQuote());\n",
-    "        Console.WriteLine(importer.SubmitOrder());\n",
+    "Console.WriteLine(importer.GetCompanyInfo());\n",
+    "Console.WriteLine(importer.ProvideQuote());\n",
+    "Console.WriteLine(importer.SubmitOrder());\n",
     "\n",
-    "        SupplierList<Supplier> suppliers = new SupplierList<Supplier>();\n",
-    "        suppliers.AddSupplier(manufacturer);\n",
-    "        suppliers.AddSupplier(retailer);\n",
-    "        suppliers.AddSupplier(importer);\n",
+    "SupplierList<Supplier> suppliers = new SupplierList<Supplier>();\n",
+    "suppliers.AddSupplier(manufacturer);\n",
+    "suppliers.AddSupplier(retailer);\n",
+    "suppliers.AddSupplier(importer);\n",
     "\n",
-    "        foreach (var supplier in suppliers.GetSuppliers())\n",
-    "        {\n",
-    "            Console.WriteLine(supplier.GetCompanyInfo());\n",
-    "        }\n",
+    "foreach (var supplier in suppliers.GetSuppliers())\n",
+    "{\n",
+    "    Console.WriteLine(supplier.GetCompanyInfo());\n",
+    "}\n",
     "\n",
-    "        ISupportAndSubscribe subscriber = importer as ISupportAndSubscribe;\n",
-    "        subscriber.Notify();\n",
-    "\n",
-    "    }"
+    "ISupportAndSubscribe subscriber = importer as ISupportAndSubscribe;\n",
+    "subscriber.Notify();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -370,8 +375,8 @@
       "Поставщик ИТ-оборудования - Стоимость услуг: 75000 руб\n",
       "\n",
       "Список сотрудников:\n",
-      "Чепурных Софа - Должность: Менеджер - Стоимость услуг: 85000 руб\n",
-      "Шаукерова Аделя - Должность: Разработчик - Стоимость услуг: 100000 руб\n",
+      "Рагимова Мадина - Должность: Менеджер - Стоимость услуг: 85000 руб\n",
+      "Моторова Дана - Должность: Разработчик - Стоимость услуг: 100000 руб\n",
       "\n",
       "Общие расходы: 400000 руб\n"
      ]
