--- a/Sprint2/Task3.ipynb
+++ b/Sprint2/Task3.ipynb
@@ -279,7 +279,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
